<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <EditText
            android:layout_width="235dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/usernameField"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.428"
            app:layout_constraintTop_toBottomOf="@+id/usernameTextView" tools:ignore="LabelFor"/>
    <EditText
            android:layout_width="234dp"
            android:layout_height="42dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/passwordField"
            app:layout_constraintTop_toBottomOf="@+id/passwordTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.425" tools:ignore="LabelFor,TextFields"/>
    <EditText
            android:layout_width="234dp"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/confirmPasswordField"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordTextView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.425" tools:ignore="LabelFor,TextFields"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/usernameTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.186" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextView" android:text="@string/password"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/usernameField"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.186"/>
    <TextView
            android:text="@string/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirmPasswordTextView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/passwordField"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.225"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextView" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordField"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.17"/>
    <EditText
            android:layout_width="233dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/emailField"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.422" tools:ignore="LabelFor,TextFields"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="156dp"
            android:layout_height="49dp"
            android:id="@+id/registerButton" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/emailField" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="64dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/cancel"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelRegisterButton" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/emailField" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/registerButton"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
</android.support.constraint.ConstraintLayout>